force-app/main/default/objects/Delivery_Preference__c/Delivery_Preference__c.object-meta.xml
<CustomObject>
    <label>Delivery Preference</label>
    <pluralLabel>Delivery Preferences</pluralLabel>
    <nameField>
        <label>Preference Name</label>
        <type>AutoNumber</type>
        <displayFormat>DP-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>