force-app/main/default/objects/Delivery_Preference__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <type>Text</type>
    <length>255</length>

</CustomField>