force-app/main/default/objects/Delivery_Preference__c/fields/Preferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date__c</fullName>
    <label>Preferred Date</label>
    <type>Date</type>

</CustomField>