force-app/main/default/objects/Delivery_Preference__c/fields/Preferred_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time__c</fullName>
    <label>Preferred Time</label>
    <type>Text</type>
    <length>255</length>

</CustomField>