force-app/main/default/objects/Delivery_Preference__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <type>Lookup</type>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipName>DeliveryPreferences</relationshipName>
    <relationshipLabel>Delivery Preferences</relationshipLabel>
</CustomField>